--- a/package.json
+++ b/package.json
@@ -8,8 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@nestjs/typeorm": "^7.1.5",
     "next": "10.0.7",
+    "pg": "^8.5.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "typeorm": "^0.2.31"
+  },
+  "devDependencies": {
+    "@types/node": "^14.6.4",
+    "@types/pg": "^7.14.10",
+    "@types/react": "^16.9.49",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "prettier": "^2.0.5",
+    "typescript": "^4.0.2"
   }
 }
